--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/react-modal": "^3.12.1",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
     "next": "11.1.2",
@@ -17,7 +18,8 @@
     "react-dnd": "^14.0.3",
     "react-dnd-html5-backend": "^14.0.1",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
