--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/react-modal": "^3.12.1",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.4",
     "cors": "^2.8.5",
     "next": "11.1.2",
